<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.liftwizard</groupId>
        <artifactId>liftwizard-profile-parent</artifactId>
        <version>2.1.46</version>
    </parent>
    <groupId>workflowy</groupId>
    <artifactId>workflowy</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Workflowy (Module Group)</name>
    <modules>
        <module>workflowy-data</module>
        <module>workflowy-domain-model</module>
        <module>workflowy-dropwizard-application</module>
        <module>workflowy-dtos</module>
        <module>workflowy-graphql-fragment</module>
        <module>workflowy-graphql-reladomo-finder</module>
        <module>workflowy-graphql-schema</module>
        <module>workflowy-graphql-schema-query</module>
        <module>workflowy-json-views</module>
        <module>workflowy-klass-macros</module>
        <module>workflowy-klass-projections</module>
        <module>workflowy-klass-services</module>
        <module>workflowy-liquibase-schema</module>
        <module>workflowy-reladomo-definitions</module>
        <module>workflowy-reladomo-merge-hooks</module>
        <module>workflowy-reladomo-pojos</module>
        <module>workflowy-reladomo-runtime-configuration</module>
        <module>workflowy-services</module>
        <module>workflowy-uml-nomnoml</module>
        <module>workflowy-embedding</module>
    </modules>
    <properties>
        <klass.version>0.6.0</klass.version>
        <app.artifactId>workflowy</app.artifactId>
        <app.rootPackageName>com.workflowy</app.rootPackageName>
        <app.name>Workflowy</app.name>
        <mainClass>${app.rootPackageName}.dropwizard.application.WorkflowyApplication</mainClass>
        <liftwizard.version>2.1.46</liftwizard.version>

        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <maven.compiler.release>25</maven.compiler.release>
    </properties>
    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>io.liftwizard</groupId>
                <artifactId>liftwizard-dependencies</artifactId>
                <version>${liftwizard.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>io.liftwizard</groupId>
                <artifactId>liftwizard-bom</artifactId>
                <version>${liftwizard.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>cool.klass</groupId>
                <artifactId>klass-bom</artifactId>
                <version>${klass.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
